--- a/estilos.css
+++ b/estilos.css
@@ -1,5 +1,10 @@
 *{
     font-family: 'Lato', sans-serif;
-    font-family: 'PT Serif', serif;
-}
+    font-family: 'PT Serif', serif;}
+    
+header {   
+      font-family: 'PT Serif', serif;
+      background-color: rgb(36, 47, 63); 
+      padding: 5px;
+      margin: 30px;}
   
