--- a/estilos.css
+++ b/estilos.css
@@ -1,10 +1,16 @@
 *{
     font-family: 'Lato', sans-serif;
     font-family: 'PT Serif', serif;}
-    
+ 
+aside { 
+    width: 25%; height: 100%;
+    background-color: rgb(15, 15, 22);}
+
+main{ 
+    width: 75%; height: 100%;}
+
 header {   
       font-family: 'PT Serif', serif;
-      background-color: rgb(36, 47, 63); 
-      padding: 5px;
-      margin: 30px;}
-  
+      background-color: rgb(36, 47, 63); }
+
+ img { }
